--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.upload{
+  display: flex;
+}
+
+.form{
+  width: 400px;
+  margin: auto;
+  padding: 25px;
+  margin-top: 20px;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+}
+
+
 .img_box{
   display: flex;
   justify-content: space-around;
@@ -9,9 +22,42 @@
   padding: 25px;
   margin-top: 20px;
   box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
- 
 }
 
 .img_text img{
   width: 300px;
+}
+
+.img_text p{
+  white-space: pre-wrap;
+  color:#555;
+  font-size: 12px;
+}
+
+.content{
+  position: relative;
+}
+
+.delete,.edit{
+  position:absolute;
+  top: 20px;
+  right: 0px;
+  background-color: transparent;
+  border-style: none;
+  
+}
+
+.edit{
+  right: 25px;
+}
+
+.delete a,.edit a{
+  text-decoration: none;
+  color:#888;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.edit a{
+  font-size: 16px;
 }
