--- a/style.css
+++ b/style.css
@@ -1,16 +1,40 @@
+.header{
+  display: flex;
+}
+.headerbtn{
+  margin: 10px;
+  padding: 6px;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+  white-space: pre-wrap;
+  color:#555;
+  font-size: 12px;
+  
+}
+
+.headerbtn a{
+  text-decoration: none;
+  color:#555;
+}
+
+
+/* アップロード画面 */
 .upload{
   display: flex;
 }
 
 .form{
-  width: 400px;
+  width: 300px;
   margin: auto;
   padding: 25px;
   margin-top: 20px;
   box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
 }
 
+.preview {
+  width: 250px;
+  }
 
+/* 内容表示画面 */
 .img_box{
   display: flex;
   justify-content: space-around;
@@ -24,7 +48,7 @@
   box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
 }
 
-.img_text img{
+.mainimg {
   width: 300px;
 }
 
@@ -34,6 +58,20 @@
   font-size: 12px;
 }
 
+.username{
+  color:#555;
+  font-size: 12px;
+}
+
+.usericon{
+  width: 30px;
+  height: 30px;
+  background-color: #aec5ce;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+/* テキスト編集、削除ボタン */
 .content{
   position: relative;
 }
@@ -51,7 +89,12 @@
   right: 25px;
 }
 
-.delete a,.edit a{
+
+.others{
+  display: none;
+}
+
+.edit_a,.delete_a{
   text-decoration: none;
   color:#888;
   font-size: 20px;
@@ -60,4 +103,33 @@
 
 .edit a{
   font-size: 16px;
+}
+
+
+
+/* ユーザー登録画面 */
+.userdata{
+  width: 300px;
+  height: 450px;
+  margin: auto;
+  padding: 25px;
+  margin-top: 20px;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+}
+ .iconpreview {
+  margin: 15px 22px 15px 22px;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+  }
+
+  /* ログイン画面 */
+  .login{
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  padding: 25px;
+  margin-top: 20px;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
 }
